# ai-agent

./: good_morning.py  main.py  pyproject.toml
.ai-agent/: config.toml
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: manager.py
prompts/: system.py
tools/: base.py  registry.py
tools/builtin/: __init__.py  read_file.py  write_file.py
ui/: tui.py
utils/: paths.py  text.py
