[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "openai>=2.15.0",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
]
